--- a/index.htm
+++ b/index.htm
@@ -17,6 +17,6 @@
         <div id="seconds">00</div>
     </div>
     <!--Script-->
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
